--- a/Airiel_Portfolio.html
+++ b/Airiel_Portfolio.html
@@ -4,6 +4,7 @@
     <title>Depante - Curriculum Vitae</title>
   </head>
   <body>
+  <main>
     <h1 style="font-family:helvetica; text-align:center; color:black; font-size:30px;"><b>CURRICULUM VITAE</b></h1>
     <h2 style="font-family:helvetica; text-align:center; color:black; font-size:50px;">Airiel Licca Depante</h2>
     <hr>
@@ -67,5 +68,6 @@
     <p style="font-family:arial; font-size:20px;"><u>Work Experience</u></p>
     <ul style="font-family:arial; text-align:justify; list-style-type:disc">
     <li>Undergraduate Research Assistant<br></ul>
+</main>
 </body>
 </html>
