--- a/Renai Portfolio/DeVera_Gallery.html
+++ b/Renai Portfolio/DeVera_Gallery.html
@@ -27,21 +27,21 @@
 		<h3> Photography </h3>
 			<div class="photography-body">
 			
-				<img src="Images/days gone by.jpg" alt="days gone by"  height="300">
-				<img src="Images/Late Afternoon Unwinding.jpg" alt="Late Afternoon Unwinding" height="300">
-				<img src="Images/My One and Only Shining Light.jpg" alt="My One and Only Shining Light" height="300">
+				<img src="Images/Photography/days gone by.jpg" alt="days gone by"  height="300">
+				<img src="Images/Photography/Late Afternoon Unwinding.jpg" alt="Late Afternoon Unwinding" height="300">
+				<img src="Images/Photography/My One and Only Shining Light.jpg" alt="My One and Only Shining Light" height="300">
 			</div>
 		
 		<h3> Videography </h3>
-			<div class="videography-body">
-				<img src="Images/days gone by.jpg" alt="days gone by" width="200" height="200">
+			<div class="video editing-body">
+				<img src="Images/Videos/days gone by.jpg" alt="days gone by" width="200" height="200">
 			</div>
 		
 		<h3> Graphic Design </h3>
 			<div class="graphicdesign-body">
-				<img src="Images/Renai's 19th Birthday Party.jpg" alt="Graphic Design 1" height="300">
-				<img src="Images/lyrics spreads.jpg" alt="Graphic Design 2" height="300">
-				<img src="Images/fb cover.jpg" alt="Graphic Design 3" height="300">
+				<img src="Images/Graphic Design/Renai's 19th Birthday Party.jpg" alt="Graphic Design 1" height="300">
+				<img src="Images/Graphic Design/lyrics spreads.jpg" alt="Graphic Design 2" height="300">
+				<img src="Images/Graphic Design/fb cover.jpg" alt="Graphic Design 3" height="300">
 			</div>
     </main>
   </body>
