--- a/Renai Portfolio/DeVera_Hobbies.html
+++ b/Renai Portfolio/DeVera_Hobbies.html
@@ -94,7 +94,7 @@
 				</div>
 				
 				<div class="grid-item">
-					<img src="Images/Music/Lofi.png" alt="Lo-fi" width="300" height="300">
+					<img src="Images/Music/Lo-fi.png" alt="Lo-fi" width="300" height="300">
 				</div>
 		  
 				<div class="grid-item">
