--- a/Homepage.html
+++ b/Homepage.html
@@ -33,7 +33,7 @@
 <div class="grid-item">
   <br>
   <a href="DeVera_CV.html">
-      <img src="Renai_img.jpg" alt="Renai" width="300" height="300">
+      <img src="Renai Portofolio/Renai_img.jpg" alt="Renai" width="300" height="300">
       <h2> Renai De Vera </h2>
     </a>
       </div>
