--- a/Homepage.html
+++ b/Homepage.html
@@ -19,7 +19,7 @@
         <div class="grid-container">
     <div class="grid-item">
         <br>
-        <a href="DepanteCV.html">
+        <a href="Airiel Portfolio/DepanteCV.html">
         <img src="AirielImages/airiel_photo.jpg" alt="Airiel" width="370" height="500">
         <h2> Airiel Licca Depante </h2>
       </a>
@@ -32,7 +32,7 @@
     <div class="grid-container">
 <div class="grid-item">
   <br>
-  <a href="DeVera_CV.html">
+  <a href="renai Portfolio/DeVera_CV.html">
       <img src="Renai Portofolio/Renai_img.jpg" alt="Renai" width="300" height="300">
       <h2> Renai De Vera </h2>
     </a>
