--- a/Homepage.html
+++ b/Homepage.html
@@ -32,7 +32,7 @@
     <div class="grid-container">
 <div class="grid-item">
   <br>
-  <a href="renai Portfolio/DeVera_CV.html">
+  <a href="Renai Portfolio/DeVera_CV.html">
       <img src="Renai Portofolio/Renai_img.jpg" alt="Renai" width="300" height="300">
       <h2> Renai De Vera </h2>
     </a>
