--- a/QuestionAnswer.html
+++ b/QuestionAnswer.html
@@ -36,11 +36,14 @@
       <br>
       <h2> Renai De Vera </h2>
       <h3>"How is OOP evident in the development of your portfolio website?" </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
+      <p> Object Oriented Programming is evident in the development of my portfolio in the way 
+			I tried to separate the content from its style. For example, instead of setting the image 
+			dimensions in HTML, I rather opted to set it with CSS to reduce redundancy.
+			In addition, OOP would be very much evident in the use of grids, especially organizing the gallery content. </p>
       <h3> "Based on your experience, how useful is OOP?" </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
+      <p> With OOP, it became much more convenient to navigate and modify parts of the code that needed adjustments.
+			It also paves way for more conciseness, organization, and orderliness, especially for websites or codes that would involve 
+			numerous elements such as portfolios. </p>
         <br>
         <br>
       </div>
