--- a/Renai Portfolio/DeVera_CV.html
+++ b/Renai Portfolio/DeVera_CV.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>De Vera - Curriculum Vitae</title>
-    <link rel="stylesheet" href="DeVeraCVstyle.css">
+    <link rel="stylesheet" href="DeVera_style.css">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
 		</div>
 		
 		<div class="photo">
-			<img src="Renai_img.jpg" alt="Renai" width="200" height="200">
+			<img src="Renai_img.jpg" alt="Renai">
 		</div>
 	  
 		<h3><b>Personal Information</b></h3>
