--- a/Renai Portfolio/DeVera_Gallery.html
+++ b/Renai Portfolio/DeVera_Gallery.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> De Vera - Gallery </title>
-	<link rel="stylesheet" href="DeVeraCVstyle.css">
+	<link rel="stylesheet" href="DeVera_style.css">
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,22 +26,27 @@
 		
 		<h3> Photography </h3>
 			<div class="photography-body">
-			
-				<img src="Images/Photography/days gone by.jpg" alt="days gone by"  height="300">
-				<img src="Images/Photography/Late Afternoon Unwinding.jpg" alt="Late Afternoon Unwinding" height="300">
-				<img src="Images/Photography/My One and Only Shining Light.jpg" alt="My One and Only Shining Light" height="300">
+				<img src="Images/Photography/days gone by.jpg" alt="days gone by">
+				<img src="Images/Photography/Late Afternoon Unwinding.jpg" alt="Late Afternoon Unwinding">
+				<img src="Images/Photography/My One and Only Shining Light.jpg" alt="My One and Only Shining Light">
 			</div>
 		
-		<h3> Videography </h3>
+		<h3> Video Editing </h3>
 			<div class="video editing-body">
-				<img src="Images/Videos/days gone by.jpg" alt="days gone by" width="200" height="200">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/gBu9dZbmmGk" title="YouTube video player" 
+				frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+				allowfullscreen></iframe>
+				
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/SJPed5CJR0g" title="YouTube video player" 
+				frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+				allowfullscreen></iframe>
 			</div>
 		
 		<h3> Graphic Design </h3>
 			<div class="graphicdesign-body">
-				<img src="Images/Graphic Design/Renai's 19th Birthday Party.jpg" alt="Graphic Design 1" height="300">
-				<img src="Images/Graphic Design/lyrics spreads.jpg" alt="Graphic Design 2" height="300">
-				<img src="Images/Graphic Design/fb cover.jpg" alt="Graphic Design 3" height="300">
+				<img src="Images/Graphic Design/rose.jpg" alt="Graphic Design 1">
+				<img src="Images/Graphic Design/today was a fairytale.jpg" alt="Graphic Design 2">
+				<img src="Images/Graphic Design/lovesong.jpg" alt="Graphic Design 3">
 			</div>
     </main>
   </body>
