--- a/Renai Portfolio/DeVera_Gallery.html
+++ b/Renai Portfolio/DeVera_Gallery.html
@@ -16,7 +16,7 @@
 			<a href="DeVera_CV.html">Curriculum Vitae</a>
 			<a href= "DeVera_Hobbies.html">Hobbies and Interests</a>
 			<a class="active" href ="#Gallery">Gallery</a>
-			<a href= "DeVera_Q&A.html">Question and Answer</a>
+			<a href= "QuestionAnswer.html">Question and Answer</a>
 		</div>
 		
 		<div class="header">
