--- a/QuestionAnswer.html
+++ b/QuestionAnswer.html
@@ -39,7 +39,7 @@
       <p> Object Oriented Programming is evident in the development of my portfolio in the way 
 	      I tried to separate the content from its style. For example, instead of setting the image 
 	      dimensions in HTML, I rather opted to set it with CSS to reduce redundancy.
-	      In addition, OOP would be very much evident in the use of grids, especially organizing the gallery content. </p>
+	      In addition, OOP would be very much evident in the use of grids, especially in organizing the gallery content. </p>
       <h3> "Based on your experience, how useful is OOP?" </h3>
       <p> With OOP, it became much more convenient to navigate and modify parts of the code that needed adjustments.
 	      It also paves way for more conciseness, organization, and orderliness, especially for websites or codes that would involve 
