--- a/Homepage.html
+++ b/Homepage.html
@@ -20,7 +20,7 @@
     <div class="grid-item">
         <br>
         <a href="Airiel Portfolio/DepanteCV.html">
-        <img src="AirielImages/airiel_photo.jpg" alt="Airiel" width="370" height="500">
+        <img src="AirielImages/id photo.jpg" alt="Airiel" width="300" height="300">
         <h2> Airiel Licca Depante </h2>
       </a>
       </div>
