--- a/Renai Portfolio/DeVera_CV.html
+++ b/Renai Portfolio/DeVera_CV.html
@@ -54,7 +54,7 @@
 			
 			<br>
 		
-				<u>Kingfiser School of Business and Finance</u><br>
+				<u>Kingfisher School of Business and Finance</u><br>
 				Mac Arthur Highway, Lucao District, Dagupan City 2400<br>
 				Academic Track: Science, Technology, Engineering, and Mathematics (STEM)<br>
 				(2018-2020)<br>
