--- a/Renai Portfolio/DeVera_CV.html
+++ b/Renai Portfolio/DeVera_CV.html
@@ -11,7 +11,7 @@
 			<a class="active" href ="#Curriculum Vitae">Curriculum Vitae </a>
 			<a href="DeVera_Hobbies.html">Hobbies and Interests</a>
 			<a href= "DeVera_Gallery.html">Gallery</a>
-			<a href= "DeVera_Q&A.html">Question and Answer</a>
+			<a href= "QuestionAnswer.html">Question and Answer</a>
 		</div>
 	
 		<div class="header">
