--- a/Renai Portfolio/DeVera_CV.html
+++ b/Renai Portfolio/DeVera_CV.html
@@ -9,8 +9,8 @@
 		<div class="topnav">
 			<a href= "Homepage.html"> Homepage </a>
 			<a class="active" href ="#Curriculum Vitae">Curriculum Vitae </a>
-			<a href="DeVera_Hobbies.html">Hobbies and Interests</a>
-			<a href= "DeVera_Gallery.html">Gallery</a>
+			<a href="Renai Portfolio/DeVera_Hobbies.html">Hobbies and Interests</a>
+			<a href= "Renai Portfolio/DeVera_Gallery.html">Gallery</a>
 			<a href= "QuestionAnswer.html">Question and Answer</a>
 		</div>
 	
