--- a/Renai Portfolio/DeVera_Gallery.html
+++ b/Renai Portfolio/DeVera_Gallery.html
@@ -9,10 +9,10 @@
     
 		<div class="topnav">
 			<a href= "Homepage.html"> Homepage </a>
-			<a href="DeVera_CV.html">Curriculum Vitae</a>
-			<a href= "DeVera_Hobbies.html">Hobbies and Interests</a>
+			<a href="Renai Portfolio/DeVera_CV.html">Curriculum Vitae</a>
+			<a href= "Renai Portfolio/DeVera_Hobbies.html">Hobbies and Interests</a>
 			<a class="active" href ="#Gallery">Gallery</a>
-			<a href= "DeVera_Q&A.html">Question and Answer</a>
+			<a href= "QuestionAnswer.html">Question and Answer</a>
 		</div>
 		
 		<div class="header">
