--- a/Website/DeVera_CV.html
+++ b/Website/DeVera_CV.html
@@ -9,8 +9,8 @@
 		<div class="topnav">
 			<a href= "Homepage.html"> Homepage </a>
 			<a class="active" href ="#Curriculum Vitae">Curriculum Vitae </a>
-			<a href="Renai Portfolio/DeVera_Hobbies.html">Hobbies and Interests</a>
-			<a href= "Renai Portfolio/DeVera_Gallery.html">Gallery</a>
+			<a href="DeVera_Hobbies.html">Hobbies and Interests</a>
+			<a href= "DeVera_Gallery.html">Gallery</a>
 			<a href= "QuestionAnswer.html">Question and Answer</a>
 		</div>
 	
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div class="photo">
-			<img src="Renai_img.jpg" alt="Renai">
+			<img src="DeVera_Images/Renai_img.jpg" alt="Renai">
 		</div>
 	  	
 		<h3>Personal Information</h3>
