--- a/Website/DeVera_Gallery.html
+++ b/Website/DeVera_Gallery.html
@@ -26,7 +26,7 @@
 			<div class="grid">
 				<div class="grid-container">
 					<div class="photography-item">
-					<img src="DeVera_Images/Photography/days gone by.jpg" alt="days gone by">
+					<img src="Photography/days gone by.jpg" alt="days gone by">
 					</div>
 					
 					<div class="photography-item">
