--- a/Website/Homepage.html
+++ b/Website/Homepage.html
@@ -19,7 +19,7 @@
         <div class="grid-container">
           <div class="grid-item">
             <br>
-            <a href="Airiel Portfolio/DepanteCV.html">
+            <a href="DepanteCV.html">
               <img src="AirielImages/id photo.jpg" alt="Airiel">
               <h2> Airiel Licca Depante </h2>
             </a>
@@ -34,8 +34,8 @@
         <div class="grid-container">
           <div class="grid-item">
             <br>
-            <a href="Renai Portfolio/DeVera_CV.html">
-            <img src="Renai Portofolio/Renai_img.jpg" alt="Renai">
+            <a href="DeVera_CV.html">
+            <img src="DeVera_Images/Renai_img.jpg" alt="Renai">
             <h2> Renai De Vera </h2>
             </a>
           </div>
