--- a/Website/Homepage.html
+++ b/Website/Homepage.html
@@ -34,8 +34,8 @@
         <div class="grid-container">
           <div class="grid-item">
             <br>
-            <a href="Website/DeVera_CV.html">
-            <img src="DeVera_Images/Renai_img.jpg" alt="Renai">
+            <a href="DeVera_CV.html">
+            <img src="Website/DeVera_Images/Renai_img.jpg" alt="Renai">
             <h2> Renai De Vera </h2>
             </a>
           </div>
