--- a/Website/Homepage.html
+++ b/Website/Homepage.html
@@ -35,7 +35,7 @@
           <div class="grid-item">
             <br>
             <a href="DeVera_CV.html">
-            <img src="Website/DeVera_Images/Renai_img.jpg" alt="Renai">
+            <img src="DeVera_Images/Renai_img.jpg" alt="Renai">
             <h2> Renai De Vera </h2>
             </a>
           </div>
